--- a/content/publication/conference-paper/cite.bib
+++ b/content/publication/conference-paper/cite.bib
@@ -1,8 +1,8 @@
-@inproceedings{example1,
-  title={An example conference paper},
-  author={Bighetti, Nelson and Ford, Robert},
-  booktitle={Source Themes Conference},
-  pages={1--6},
-  year={2013},
+@inproceedings{isscc2017,
+  title={0.42 ps-jitter− 241.7 dB-FOM synthesizable injection-locked PLL with noise-isolation LDO},
+  author={Huy Cu Ngo ; Kengo Nakata ; Toru Yoshioka ; Yuki Terashima ; Kenichi Okada ; Akira Matsuzawa},
+  booktitle={International Solid-State Circuits Conference (ISSCC)},
+  pages={150-151},
+  year={2017},
   organization={IEEE}
 }
