--- a/content/publication/isscc2017/cite.bib
+++ b/content/publication/isscc2017/cite.bib
@@ -1,6 +1,6 @@
 @inproceedings{isscc2017,
   title={0.42 ps-jitter− 241.7 dB-FOM synthesizable injection-locked PLL with noise-isolation LDO},
-  author={Huy Cu Ngo ; Kengo Nakata ; Toru Yoshioka ; Yuki Terashima ; Kenichi Okada ; Akira Matsuzawa},
+  author={Huy Cu Ngo, Kengo Nakata, Toru Yoshioka, Yuki Terashima, Kenichi Okada, Akira Matsuzawa},
   booktitle={International Solid-State Circuits Conference (ISSCC)},
   pages={150-151},
   year={2017},
